added pg module and resources folder

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -1,1 +1,11 @@
-p Hello world!
+link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css")
+link(rel="stylesheet" href="/resources/css/style.css")
+
+.navbar-fixed
+    nav
+        .nav-wrapper
+            a.brand-logo(href='/') Brand
+            ul
+                li.active(href='/') Home
+                li(href='/') Here
+                li(href='/') There
