adjustments to structure, express_static

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -1,11 +1,13 @@
 link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css")
-link(rel="stylesheet" href="/resources/css/style.css")
+link(rel="stylesheet" href="/css/style.css")
 
 .navbar-fixed
     nav
         .nav-wrapper
-            a.brand-logo(href='/') Brand
-            ul
+            a.brand-logo(href='/' style='margin-left:20px') Brand
+            ul.right
                 li.active(href='/') Home
                 li(href='/') Here
                 li(href='/') There
+                
+h1 HELLO
