--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -1,13 +1,48 @@
-link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css")
-link(rel="stylesheet" href="/css/style.css")
+doctype html
+html(lang='en')
+	head
+		title Auction House Dashboard
+		link(href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
+		link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css")
+		link(rel="stylesheet" href="/css/style.css")
+		meta(name='viewport', content='width=device-width, initial-scale=1')
 
-.navbar-fixed
-    nav
-        .nav-wrapper
-            a.brand-logo(href='/' style='margin-left:20px') Brand
-            ul.right
-                li.active(href='/') Home
-                li(href='/') Here
-                li(href='/') There
+	body
+		script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
+			script.
+				$(document).ready(function () {
+					$(".dropdown-button").dropdown({ beloworigin: true });
+				})
+		script(src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js")
+
+		ul#dropdown1(class="dropdown-content")
+			li
+				a(href="#!") one
+			li
+				a(href="#!") two
+			li.divider
+			li
+				a(href="#!") add new
+		.navbar-fixed
+			nav
+				.nav-wrapper
+					a.brand-logo(href='/' style='margin-left:20px') Auction House
+					a(href="#" data-activates="mobile-demo" class="button-collapse")
+						i.material-icons menu
+						ul.right(id="nav-mobile" class="hide-on-med-and-down")
+							li.active
+								a(href="/") Home
+							li
+								a(href="/item") Items
+							li
+								a(href="/") Consigners
+							li
+								a(href="/") Bidders
+							li
+								a.dropdown-button(href="#!" data-activates="dropdown1" data-beloworigin="true") Auctions
+									i(class="material-icons right") arrow_drop_down
+								
+
                 
-h1 HELLO
+		.container
+			h1 HELLO
