--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -35,7 +35,7 @@ html(lang='en')
 							li
 								a(href="/item") Items
 							li
-								a(href="/") Consigners
+								a(href="/consignor") Consigners
 							li
 								a(href="/") Bidders
 							li
