--- a/src/views/consignor.jade
+++ b/src/views/consignor.jade
@@ -1,107 +1,105 @@
 doctype html
 html(lang='en')
-	head
-		title Auction House Dashboard
-		link(href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
-		link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css")
-		link(rel="stylesheet" href="/css/style.css")
-		meta(name='viewport', content='width=device-width, initial-scale=1')
+head
+	title Auction House Dashboard
+	link(href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
+	link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css")
+	link(rel="stylesheet" href="/css/style.css")
+	meta(name='viewport', content='width=device-width, initial-scale=1')
+	script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
+	script(src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js")
+	script(src="/js/custom.js")
 
-	body
+body
 
-		script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
-		script(src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js")
-		script(src="/js/custom.js")
-
-		ul#dropdown1(class="dropdown-content")
-			li
-				a(href="#!") one
-			li
-				a(href="#!") two
-			li.divider
-			li
-				a(href="#!") add new
-		.navbar-fixed
-			nav
-				.nav-wrapper
-					a.brand-logo(href='/' style='margin-left:20px') Auction House
-					a(href="#" data-activates="mobile-demo" class="button-collapse")
-						i.material-icons menu
-						ul.right(id="nav-mobile" class="hide-on-med-and-down")
-							li.active
-								a(href="/") Home
-							li
-								a(href="/item") Items
-							li
-								a(href="/") Consigners
-							li
-								a(href="/") Bidders
-							li
-								a.dropdown-button(href="#!" data-activates="dropdown1" data-beloworigin="true") Auctions
-									i(class="material-icons right") arrow_drop_down
-
-	ul(class="collapsible popout" data-collapsible="accordion")
+	ul#dropdown1(class="dropdown-content")
 		li
-			div(class="collapsible-header active") Personal Information
-			div(class="collapsible-body blue-grey darken-1")
+			a(href="#!") one
+		li
+			a(href="#!") two
+		li.divider
+		li
+			a(href="#!") add new
+	.navbar-fixed
+		nav
+			.nav-wrapper
+				a.brand-logo(href='/' style='margin-left:20px') Auction House
+				a(href="#" data-activates="mobile-demo" class="button-collapse")
+					i.material-icons menu
+					ul.right(id="nav-mobile" class="hide-on-med-and-down")
+						li.active
+							a(href="/") Home
+						li
+							a(href="/item") Items
+						li
+							a(href="/") Consigners
+						li
+							a(href="/") Bidders
+						li
+							a.dropdown-button(href="#!" data-activates="dropdown1" data-beloworigin="true") Auctions
+								i(class="material-icons right") arrow_drop_down
+	
+	.row							
+		div(class="blue-grey darken-1 col s6")
 
-				.row
-					form(action='/consignor' method='post' class='col s12' style="margin:10px")
-						.row
-							input-field(class='col s2')
-								label(for="firstname") First Name
-								input(placeholder="First Name" name="firstname" type="text" class="validate")
+				form(action='/consignor' method='post' class='col s12 white-text' style="margin:10px")
+					.row(class="col s12")
+						input-field(class='col s4')
+							label(for="firstname") First Name
+							input(placeholder="First Name" name="firstname" type="text" class="validate")
 
-							input-field(class='col s4')
-								label(for="lastname") Last Name
-								input(placeholder="Last Name" name="lastname" type="text" class="validate")
+						input-field(class='col s8')
+							label(for="lastname") Last Name
+							input(placeholder="Last Name" name="lastname" type="text" class="validate")
 
-						.row    
-							input-field(class='col s6')
-								label(for="address") Address
-								input(placeholder="Address" name="address" type="text" class="validate")
+					.row    
+						input-field(class='col s12')
+							label(for="address") Address
+							input(placeholder="Address" name="address" type="text" class="validate")
 
-						.row
-							input-field(class='col s1')
-								label(for="zipcode") Zipcode
-								input(placeholder="Zipcode" name="zipcode" type="text" class="validate")
+					.row
+						input-field(class='col s2')
+							label(for="zipcode") Zipcode
+							input(placeholder="Zipcode" name="zipcode" type="text" class="validate")
 
-							input-field(class='col s2')
-								label(for="city") City
-								input(placeholder="City" name="city" type="text" class="validate")
+						input-field(class='col s4')
+							label(for="city") City
+							input(placeholder="City" name="city" type="text" class="validate")
 
-							input-field(class='col s3')
-								label(for="country") Country
-								input(placeholder="Country" name="country" type="text" class="validate")
-						.row
-							input-field(class='col s2')
-								label(for="phone") Phone
-								input(placeholder="Phone Number" name="phone" type="text" class="validate")
+						input-field(class='col s6')
+							label(for="country") Country
+							input(placeholder="Country" name="country" type="text" class="validate")
+					.row
+						input-field(class='col s4')
+							label(for="phone") Phone
+							input(placeholder="Phone Number" name="phone" type="text" class="validate")
 
-							input-field(class='col s4')
-								label(for="email") Email
-								input(placeholder="Email" name="email" type="text" class="validate")
+						input-field(class='col s8')
+							label(for="email") Email
+							input(placeholder="Email" name="email" type="text" class="validate")
 
 
-						.row
-							input-field(class='col s3 card blue-grey darken-1')
-								label(for="bankaccount") Bank Account
-								input(placeholder="Bank Account" name="bankaccount" type="text" class="validate")
+					.row
+						input-field(class='col s6 blue-grey darken-1')
+							label(for="bankaccount") Bank Account
+							input(placeholder="Bank Account" name="bankaccount" type="text" class="validate")
 
-						.row    
-							input-field(class='col s3 card blue-grey darken-1')
-								label(for="commission") Commission
-								input(placeholder="Commission" name="commission" type="text" class="validate" DisplayFormatString="0 %")
-						.row    
-							input-field(class='col s3 card blue-grey darken-1')
+						div(class="col s3")
+							label(for="commission") Commision
+							input(value="10%" id="commission" name="group1" type="text" class="validate")
+
+						div(class="col s3")
+							input-field
 								label(for="fee") Fee
-								input(placeholder="Fee" name="fee" type="text" class="validate" DisplayFormatString="0 %")
-						.row
-							input(type="submit", value="add")
+								input(placeholder="Fee" name="fee" type="text" class="validate")
+					.row
+						button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add") Add
+					
+		
+		div(class="blue-grey darken-3 col s6")
 
-		//- li
-		//- 	div(class="collapsible-header") Business Information
-		//- 	div(class="collapsible-body")
-		//- 		.row
-		//- 			form(class='col s12' style="margin:10px")
-
+	//- li
+	//- 	div(class="collapsible-header") Business Information
+	//- 	div(class="collapsible-body")
+	//- 		.row
+	//- 			form(class='col s12' style="margin:10px")
