--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -31,7 +31,7 @@ html(lang='en')
 						i.material-icons menu
 						ul.right(id="nav-mobile" class="hide-on-med-and-down")
 							li.active
-								a(href="/") Home
+								a(href="/") Dashboard
 							li
 								a(href="/item") Items
 							li
@@ -41,8 +41,12 @@ html(lang='en')
 							li
 								a.dropdown-button(href="#!" data-activates="dropdown1" data-beloworigin="true") Auctions
 									i(class="material-icons right") arrow_drop_down
-								
-
-                
-		.container
-			h1 HELLO
+									
+		.row
+			div(class="col s6 blue-grey darken-1" style="height:100vh")
+			
+			div(class="col s3 blue-grey darken-2" style="height:100vh")
+			
+			div(class="col s3 blue-grey darken-3" style="height:50vh")
+			
+			div(class="col s3 blue-grey darken-4" style="height:50vh")
