--- a/src/views/consignor.jade
+++ b/src/views/consignor.jade
@@ -49,9 +49,9 @@ body
 					th City
 				each consignor in consignors
 					tr
-						td=consignors.firstname
-						td=consignors.lastname
-						td=consignors.city
+						td=consignor.firstname
+						td=consignor.lastname
+						td=consignor.city
 
 		div(class="blue-grey darken-1 col s6" style="height:100vh")
 
