--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -37,7 +37,7 @@ html(lang='en')
 							li
 								a(href="/consignor") Consignors
 							li
-								a(href="/") Bidders
+								a(href="/bidder") Bidders
 							li
 								a.dropdown-button(href="#!" data-activates="dropdown1" data-beloworigin="true") Auctions
 									i(class="material-icons right") arrow_drop_down
