--- a/src/views/consignor.jade
+++ b/src/views/consignor.jade
@@ -42,13 +42,16 @@ body
 	.row
 		
 		div(class="blue-grey darken-3 col s6" style="height:100vh")
-			table(class="bordered white")
+			table(class="bordered")
 				tr
+					th ID
 					th Firstname
 					th Lastname
 					th City
+					
 				each consignor in consignors
 					tr
+						td=consignors.id
 						td=consignors.firstname
 						td=consignors.lastname
 						td=consignors.city
@@ -98,12 +101,12 @@ body
 						input(placeholder="Bank Account" name="bankaccount" type="text" class="validate")
 
 					div(class="col s3")
-						label(for="commission") Commision
-						input(value="10%" id="commission" name="group1" type="text" class="validate")
+						label(for="commission") Commision - %
+						input(value="10" id="commission" name="group1" type="text" class="validate")
 
 					div(class="col s3")
 						input-field
-							label(for="fee") Fee
-							input(placeholder="Fee" name="fee" type="text" class="validate")
+							label(for="fee") Fee - €
+							input(placeholder="Fee" value="10" name="fee" type="text" class="validate")
 				.row
 					button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add") Add
