--- a/src/views/consignor.jade
+++ b/src/views/consignor.jade
@@ -23,7 +23,7 @@ body
 	.navbar-fixed
 		nav
 			.nav-wrapper
-				a.brand-logo(href='/' style='margin-left:20px') Auction House
+				a.brand-logo(href='/' style='margin-left:20px') Auctionhouse
 				a(href="#" data-activates="mobile-demo" class="button-collapse")
 					i.material-icons menu
 					ul.right(id="nav-mobile" class="hide-on-med-and-down")
@@ -41,72 +41,64 @@ body
 
 	.row
 		
-		div(class="blue-grey darken-3 col s6" style="height:100vh")
-			table(class="bordered")
-				tr
-					th ID
-					th Firstname
-					th Lastname
-					th City
-					
-				each consignor in consignors
-					tr
-						td=consignors.id
-						td=consignors.firstname
-						td=consignors.lastname
-						td=consignors.city
+		div(class="blue-grey darken-3 col s6" style="height:100vh")					
+			each consignor in consignors
+				button(class="btn waves-effect waves-light blue-grey darken-4" type="get" value=consignor.lastname)
 
-		div(class="blue-grey darken-1 col s6" style="height:100vh")
+		div(class="blue-grey darken-2 col s6" style="height:100vh")
+			ul(class="collapsible" data-collapsible="accordion")
+				li
+					div(class="collapsible-header") Add new consignor
+					div(class="collapsible-body")
+						form(action='/consignor' method='post' class='col s12 white-text' style="margin:10px")
+							.row(class="col s12")
+								input-field(class='col s4')
+									label(for="firstname") First Name
+									input(placeholder="First Name" name="firstname" type="text" class="validate")
 
-			form(action='/consignor' method='post' class='col s12 white-text' style="margin:10px")
-				.row(class="col s12")
-					input-field(class='col s4')
-						label(for="firstname") First Name
-						input(placeholder="First Name" name="firstname" type="text" class="validate")
+								input-field(class='col s8')
+									label(for="lastname") Last Name
+									input(placeholder="Last Name" name="lastname" type="text" class="validate")
 
-					input-field(class='col s8')
-						label(for="lastname") Last Name
-						input(placeholder="Last Name" name="lastname" type="text" class="validate")
+							.row    
+								input-field(class='col s12')
+									label(for="address") Address
+									input(placeholder="Address" name="address" type="text" class="validate")
 
-				.row    
-					input-field(class='col s12')
-						label(for="address") Address
-						input(placeholder="Address" name="address" type="text" class="validate")
+							.row
+								input-field(class='col s2')
+									label(for="zipcode") Zipcode
+									input(placeholder="Zipcode" name="zipcode" type="text" class="validate")
 
-				.row
-					input-field(class='col s2')
-						label(for="zipcode") Zipcode
-						input(placeholder="Zipcode" name="zipcode" type="text" class="validate")
+								input-field(class='col s4')
+									label(for="city") City
+									input(placeholder="City" name="city" type="text" class="validate")
 
-					input-field(class='col s4')
-						label(for="city") City
-						input(placeholder="City" name="city" type="text" class="validate")
+								input-field(class='col s6')
+									label(for="country") Country
+									input(placeholder="Country" name="country" type="text" class="validate")
+							.row
+								input-field(class='col s4')
+									label(for="phone") Phone
+									input(placeholder="Phone Number" name="phone" type="text" class="validate")
 
-					input-field(class='col s6')
-						label(for="country") Country
-						input(placeholder="Country" name="country" type="text" class="validate")
-				.row
-					input-field(class='col s4')
-						label(for="phone") Phone
-						input(placeholder="Phone Number" name="phone" type="text" class="validate")
-
-					input-field(class='col s8')
-						label(for="email") Email
-						input(placeholder="Email" name="email" type="text" class="validate")
+								input-field(class='col s8')
+									label(for="email") Email
+									input(placeholder="Email" name="email" type="text" class="validate")
 
 
-				.row
-					input-field(class='col s6 blue-grey darken-1')
-						label(for="bankaccount") Bank Account
-						input(placeholder="Bank Account" name="bankaccount" type="text" class="validate")
+							.row
+								input-field(class='col s6')
+									label(for="bankaccount") Bank Account
+									input(placeholder="Bank Account" name="bankaccount" type="text" class="validate")
 
-					div(class="col s3")
-						label(for="commission") Commision - %
-						input(value="10" id="commission" name="group1" type="text" class="validate")
+								div(class="col s3")
+									label(for="commission") Commision - %
+									input(value="10" id="commission" name="group1" type="text" class="validate")
 
-					div(class="col s3")
-						input-field
-							label(for="fee") Fee - €
-							input(placeholder="Fee" value="10" name="fee" type="text" class="validate")
-				.row
-					button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add") Add
+								div(class="col s3")
+									input-field
+										label(for="fee") Fee - €
+										input(placeholder="Fee" value="10" name="fee" type="text" class="validate")
+							.row
+								button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add") Add
