tested new form layout

--- a/src/views/forms/consignorform.jade
+++ b/src/views/forms/consignorform.jade
@@ -41,8 +41,8 @@ form(action='/consignor' method='post' class='col s12 white-text' style="margin:
             input(placeholder="Bank Account" name="bankaccount" type="text" class="validate")
 
         div(class="col s3")
-            label(for="commission") Commision - %
-            input(value="10" id="commission" name="group1" type="text" class="validate")
+            label(for="commission") Commission - %
+            input(value="10" id="commission" name="commission" type="text" class="validate")
 
 
         div(class="col s3")
