--- a/src/views/bidder.jade
+++ b/src/views/bidder.jade
@@ -12,98 +12,29 @@ head
 
 body
 
-	ul#dropdown1(class="dropdown-content")
-		li
-			a(href="#!") one
-		li
-			a(href="#!") two
-		li.divider
-		li
-			a(href="#!") add new
-	.navbar-fixed
-		nav
-			.nav-wrapper
-				a.brand-logo(href='/' style='margin-left:20px') Auction House
-				a(href="#" data-activates="mobile-demo" class="button-collapse")
-					i.material-icons menu
-					ul.right(id="nav-mobile" class="hide-on-med-and-down")
-						li
-							a(href="/") Dashboard
-						li
-							a(href="/item") Items
-						li
-							a(href="/") Consigners
-						li.active
-							a(href="/") Bidders
-						li
-							a.dropdown-button(href="#!" data-activates="dropdown1" data-beloworigin="true") Auctions
-								i(class="material-icons right") arrow_drop_down
+	include ./navbar.jade
 
 	.row
 		
 		div(class="blue-grey darken-3 col s6" style="height:100vh")
-			table(class="bordered white")
-				tr
-					th Firstname
-					th Lastname
-					th City
-				each bidder in bidders
+			table(class="white-text bordered highlight" id="consignors" cellspacing="0" width="100%")
+				thead
 					tr
-						td=bidder.firstname
-						td=bidder.lastname
-						td=bidder.city
+						th Firstname
+						th Lastname
+						th City
+				tbody
+					each bidder in bidders
+						tr
+							td=bidder.firstname
+							td=bidder.lastname
+							td=bidder.city
 
-		div(class="blue-grey darken-1 col s6" style="height:100vh")
-
-			form(action='/consignor' method='post' class='col s12 white-text' style="margin:10px")
-				.row(class="col s12")
-					input-field(class='col s4')
-						label(for="firstname") First Name
-						input(placeholder="First Name" name="firstname" type="text" class="validate")
-
-					input-field(class='col s8')
-						label(for="lastname") Last Name
-						input(placeholder="Last Name" name="lastname" type="text" class="validate")
-
-				.row    
-					input-field(class='col s12')
-						label(for="address") Address
-						input(placeholder="Address" name="address" type="text" class="validate")
-
-				.row
-					input-field(class='col s2')
-						label(for="zipcode") Zipcode
-						input(placeholder="Zipcode" name="zipcode" type="text" class="validate")
-
-					input-field(class='col s4')
-						label(for="city") City
-						input(placeholder="City" name="city" type="text" class="validate")
-
-					input-field(class='col s6')
-						label(for="country") Country
-						input(placeholder="Country" name="country" type="text" class="validate")
-				.row
-					input-field(class='col s4')
-						label(for="phone") Phone
-						input(placeholder="Phone Number" name="phone" type="text" class="validate")
-
-					input-field(class='col s8')
-						label(for="email") Email
-						input(placeholder="Email" name="email" type="text" class="validate")
-
-
-				.row
-					input-field(class='col s6 blue-grey darken-1')
-						label(for="payment") Payment
-						input(placeholder="Payment" name="payment" type="text" class="validate")
-
-					div(class="col s3")
-						label(for="commission") Commission
-						input(value="10%" id="commission" name="group1" type="text" class="validate")
-
-					div(class="col s3")
-						input-field
-							label(for="fee") Fee
-							input(placeholder="Fee" name="fee" type="text" class="validate")
-				.row
-					button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add") Add
+		div(class="blue-grey darken-2 col s6" style="height:100vh")
+			ul(class="collapsible" data-collapsible="accordion")
+				li
+					div(class="btn waves-effect waves-light blue-grey darken-4 collapsible-header") Add new bidder
+							i(class="small material-icons blue-text" id="addBidder") add
+							
+					div(class="collapsible-body")
+						include ./forms/bidderform.jade
