--- a/src/views/consignor.jade
+++ b/src/views/consignor.jade
@@ -5,60 +5,38 @@ head
 	link(href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
 	link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css")
 	link(rel="stylesheet" href="/css/style.css")
+	link(rel="stylesheet" href="/css/tables.css")
 	meta(name='viewport', content='width=device-width, initial-scale=1')
 	script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
 	script(src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js")
 	script(src="/js/custom.js")
 
 body
-
-	ul#dropdown1(class="dropdown-content")
-		li
-			a(href="#!") one
-		li
-			a(href="#!") two
-		li.divider
-		li
-			a(href="#!") add new
-	.navbar-fixed
-		nav
-			.nav-wrapper
-				a.brand-logo(href='/' style='margin-left:20px') Auctionhouse
-				a(href="#" data-activates="mobile-demo" class="button-collapse")
-					i.material-icons menu
-					ul.right(id="nav-mobile" class="hide-on-med-and-down")
-						li
-							a(href="/") Dashboard
-						li
-							a(href="/item") Items
-						li.active
-							a(href="/") Consigners
-						li
-							a(href="/") Bidders
-						li
-							a.dropdown-button(href="#!" data-activates="dropdown1" data-beloworigin="true") Auctions
-								i(class="material-icons right") arrow_drop_down
-
+	include ./navbar.jade
+	
 	.row
 		
-
-
-
 		div(class="blue-grey darken-3 col s6" style="height:100vh")
-			table(class="bordered white")
-				tr
-					th Firstname
-					th Lastname
-					th City
-				each consignor in consignors
+			table(class="white-text bordered highlight" id="consignors" cellspacing="0" width="100%")
+				thead
 					tr
-						td=consignor.firstname
-						td=consignor.lastname
-						td=consignor.city
+						th Name
+						th City
+						th
+				tbody
+					each consignor in consignors
+						tr
+							td=consignor.firstname +" "+ consignor.lastname
+							td=consignor.city
+							td
+								i(class="small material-icons blue-text" id="viewConsignor") visibility
+							
 
 		div(class="blue-grey darken-2 col s6" style="height:100vh")
 			ul(class="collapsible" data-collapsible="accordion")
 				li
-					div(class="collapsible-header") Add new consignor
+					div(class="btn waves-effect waves-light blue-grey darken-4 collapsible-header") Add new consignor
+							i(class="small material-icons blue-text" id="viewConsignor") add
+							
 					div(class="collapsible-body")
 						include ./forms/consignorform.jade
