--- a/src/views/item.jade
+++ b/src/views/item.jade
@@ -11,66 +11,30 @@ head
 	script(src="/js/custom.js")
 
 body
-
-	ul#dropdown1(class="dropdown-content")
-		li
-			a(href="#!") one
-		li
-			a(href="#!") two
-		li.divider
-		li
-			a(href="#!") add new
-	.navbar-fixed
-		nav
-			.nav-wrapper
-				a.brand-logo(href='/' style='margin-left:20px') Auction House
-				a(href="#" data-activates="mobile-demo" class="button-collapse")
-					i.material-icons menu
-					ul.right(id="nav-mobile" class="hide-on-med-and-down")
-						li
-							a(href="/") Dashboard
-						li.active
-							a(href="/item") Items
-						li
-							a(href="/consignor") Consigners
-						li
-							a(href="/") Bidders
-						li
-							a.dropdown-button(href="#!" data-activates="dropdown1" data-beloworigin="true") Auctions
-								i(class="material-icons right") arrow_drop_down
+	include ./navbar.jade
 
 	.row
 
 		div(class="blue-grey darken-3 col s6" style="height:100vh")
-			table(class="bordered white")
-				tr
-					th Lotnumber
-					th Item Name
-					th Description
-				each item in items
+			table(class="white-text bordered highlight" id="consignors" cellspacing="0" width="100%")
+				thead
 					tr
-						td=item.lotnumber
-						td=item.name
-						td=item.description
+						th Lotnumber
+						th Item Name
+						th Description
+				tbody
+					each item in items
+						tr
+							td=item.lotnumber
+							td=item.name
+							td=item.description
 
-		div(class="blue-grey darken-1 col s6" style="height:100vh")
+
+		div(class="blue-grey darken-2 col s6" style="height:100vh")
 
 			ul(class="collapsible" data-collapsible="accordion")
 				li
-					div(class="collapsible-header") Add new lot
+					div(class="btn waves-effect waves-light blue-grey darken-4 collapsible-header") Add new lot
+						i(class="small material-icons blue-text" id="viewConsignor") add
 					div(class="collapsible-body")
 						include ./forms/lotform.jade
-
-				//- .row
-				//- 	input-field(class='col s6 blue-grey darken-1')
-				//- 		label(for="bankaccount") Bank Account
-				//- 		input(placeholder="Bank Account" name="bankaccount" type="text" class="validate")
-
-				//- 	div(class="col s3")
-				//- 		label(for="commission") Commision
-				//- 		input(value="10%" id="commission" name="group1" type="text" class="validate")
-
-				//- 	div(class="col s3")
-				//- 		input-field
-				//- 			label(for="fee") Fee
-				//- 			input(placeholder="Fee" name="fee" type="text" class="validate")
