--- a/src/views/forms/lotform.jade
+++ b/src/views/forms/lotform.jade
@@ -10,8 +10,8 @@ form(action='/item' method='post' class='col s12 white-text' style="margin:10px"
             input(placeholder="Item Name" name="name" type="text" class="validate")
    
         input-field(class='col s4')
-            label(for="catergory") Catergory
-            input(placeholder="Catergory" name="catergory" type="text" class="validate")
+            label(for="category") Category
+            input(placeholder="Category" name="category" type="text" class="validate")
 
     .row
         input-field(class='col s12')
