--- a/src/views/item.jade
+++ b/src/views/item.jade
@@ -47,6 +47,7 @@ body
 					div(class="collapsible-body")
 						each item in items
 							form(action='/item' method='post' class='col s12 white-text' style="margin:10px")
+								input(type="hidden" name="_method" value="put")
 								.row(class="col s12")
 							
 									input-field(class='col s2')
@@ -58,8 +59,8 @@ body
 										input(value="#{item.name}" name="name" type="text" class="validate")
 
 									input-field(class='col s4')
-										label(for="catergory") Catergory
-										input(value="#{item.category}" name="catergory" type="text" class="validate")
+										label(for="category") Category
+										input(value="#{item.category}" name="category" type="text" class="validate")
 
 								.row
 									input-field(class='col s12')
