added ui to dashboard and modul form on consignor page

--- a/src/views/forms/consignorform.jade
+++ b/src/views/forms/consignorform.jade
@@ -1,4 +1,4 @@
-form(action='/consignor' method='post' class='col s12 white-text' style="margin:10px")
+form(action='/consignor' method='post' class='col s12 black-text' style="margin:10px")
     .row(class="col s12")
         input-field(class='col s4')
             label(for="firstname") First Name
