--- a/src/views/consignor.jade
+++ b/src/views/consignor.jade
@@ -17,19 +17,28 @@ body
 	.row
 		
 		div(class="blue-grey darken-3 col s6" style="height:100vh")
+			
+			a(class="waves-effect waves-light btn modal-trigger" href="#modal1") Add Consignor
+			div(id="modal1" class="modal")
+				div(class="modal-content")
+					include ./forms/consignorform.jade
+			
 			table(class="white-text bordered highlight" id="consignors" cellspacing="0" width="100%")
 				thead
 					tr
+						th ID
 						th Name
 						th City
 						th
 				tbody
 					each consignor in consignors
 						tr
+							td=consignor.id
 							td=consignor.firstname +" "+ consignor.lastname
 							td=consignor.city
 							td
-								i(class="small material-icons blue-text" id="viewConsignor") visibility
+								button(class="btn waves-effect waves-light blue-grey darken-4" type="get" value="get") edit
+								
 							
 
 		div(class="blue-grey darken-2 col s6" style="height:100vh")
