--- a/src/views/forms/lotform.jade
+++ b/src/views/forms/lotform.jade
@@ -1,16 +1,25 @@
 form(action='/item' method='post' class='col s12 white-text' style="margin:10px")
     .row(class="col s12")
         
-        input-field(class='col s2')
+        input-field(class='col s2 blue-grey darken-4')
+            label(for="consignorid") Consignor #ID
+            input(placeholder="Consignor#ID" name="consignorId" type="text" class="validate")
+        
+        input-field(class='col s2 blue-grey darken-4')
+            label(for="lotid") Lot #ID
+            input(placeholder="Lot#ID" name="lotid" type="text" class="validate")
+        
+        input-field(class='col s2 blue-grey darken-4')
             label(for="lotnumber") Lotnumber
             input(placeholder="Lotnumber" name="lotnumber" type="text" class="validate")
-
+    
+    .row
         input-field(class='col s6')
             label(for="itemname") Item Name
             input(placeholder="Item Name" name="name" type="text" class="validate")
    
         input-field(class='col s4')
-            label(for="catergory") Catergory
+            label(for="catergory") Category
             input(placeholder="Catergory" name="catergory" type="text" class="validate")
 
     .row
@@ -30,9 +39,6 @@ form(action='/item' method='post' class='col s12 white-text' style="margin:10px"
             label(for="premium") Premium
             input(placeholder="Premium" name="premium" type="text" class="validate")
 
-        input-field(class='col s4')
-            label(for="consignorid") Consignor#Id
-            input(placeholder="Consignor#Id" name="consignorId" type="text" class="validate")
             
     .row
         button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add") Add
