--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -1,5 +1,5 @@
 doctype html
-html(lang='en')
+html(lang='en' class="blue-grey darken-4")
 	head
 		title Auction House Dashboard
 		link(href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
@@ -12,12 +12,25 @@ html(lang='en')
 
 	body
 		include ./navbar.jade
-									
+
 		.row
-			div(class="col s6 blue-grey darken-1" style="height:100vh")
-			
-			div(class="col s3 blue-grey darken-2" style="height:100vh")
-			
-			div(class="col s3 blue-grey darken-3" style="height:50vh")
-			
-			div(class="col s3 blue-grey darken-4" style="height:50vh")
+			div(class="col s6 blue-grey darken-2" style="height:100vh")
+
+			div(class="col s3 blue-grey darken-1" style="height:100vh")
+
+			div(class="col s3 blue-grey darken-3 white-text center" style="height:60vh")
+				h4 Invoices
+				form(action='/item' method='post' class='col s12' style="margin:10px")
+					.row
+						input-field(class='col s12')
+							input(placeholder="Consigner ID" name="printConsignor" type="text" class="validate")
+					.row
+						button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add") Print Invoice
+
+					.row
+						input-field(class='col s12')
+							input(placeholder="Bidder ID" name="printBidder" type="text" class="validate")
+					.row
+						button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add") Print Invoice
+
+			div(class="col s3 blue-grey darken-2" style="height:40vh")
