--- a/src/views/item.jade
+++ b/src/views/item.jade
@@ -46,41 +46,46 @@ body
 						i(class="small material-icons blue-text" id="viewConsignor") add
 					div(class="collapsible-body")
 						each item in items
-							form(action='/item' method='post' class='col s12 white-text' style="margin:10px")
-								.row(class="col s12")
-							
-									input-field(class='col s2')
-										label(for="lotnumber") Lotnumber
-										input(value="#{item.lotnumber}" name="lotnumber" type="text" class="validate")
+							div(class="gear")
+								label(for="lotnumber") Lotnumber
+								span(name="lotnumber")= item.lotnumber
+								a(href="#" class="editlink") Edit Info
+								a(class="savebtn") Save
 
-									input-field(class='col s6')
-										label(for="itemname") Item Name
-										input(value="#{item.name}" name="name" type="text" class="validate")
+								label(for="itemname") Item Name
+								span(name="name")= item.name
+								a(href="#" class="editlink") Edit Info
+								a(class="savebtn") Save
 
-									input-field(class='col s4')
-										label(for="category") Category
-										input(value="#{item.category}" name="category" type="text" class="validate")
+								label(for="category") Category
+								span(name="category")= item.category
+								a(href="#" class="editlink") Edit Info
+								a(class="savebtn") Save
 
-								.row
-									input-field(class='col s12')
-										label(for="description") Description
-										input(value="#{item.description}" name="description" type="text" class="validate")
-								.row
-									input-field(class='col s4')
-										label(for="estimate") Estimate
-										input(value="#{item.estimate}" name="estimate" type="text" class="validate")
+								label(for="description") Description
+								span(name="description")= item.description
+								a(href="#" class="editlink") Edit Info
+								a(class="savebtn") Save
 
-									input-field(class='col s6')
-										label(for="reserve") Reserve
-										input(value="#{item.reserve}" name="reserve" type="text" class="validate")
+								label(for="estimate") Estimate
+								span(name="estimate")= item.estimate
+								a(href="#" class="editlink") Edit Info
+								a(class="savebtn") Save
 
-									input-field(class='col s4')
-										label(for="premium") Premium
-										input(value="#{item.premium}" name="premium" type="text" class="validate")
+								label(for="reserve") Reserve
+								span(name="reserve")= item.reserve
+								a(href="#" class="editlink") Edit Info
+								a(class="savebtn") Save
 
-									input-field(class='col s4')
-										label(for="consignorid") Consignor#Id
-										input(value="#{item.consignorId}" name="consignorId" type="text" class="validate")
+								label(for="premium") Premium
+								span(name="premium")= item.premium
+								a(href="#" class="editlink") Edit Info
+								a(class="savebtn") Save
+
+								label(for="consignorid") Consignor#Id
+								span(name="consignorId")= item.consignorId
+								a(href="#" class="editlink") Edit Info
+								a(class="savebtn") Save
 
 								.row
 									button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value='#{item.id}' name='updateid') Update
