--- a/src/views/forms/bidderform.jade
+++ b/src/views/forms/bidderform.jade
@@ -1,4 +1,4 @@
-form(action='/consignor' method='post' class='col s12 white-text' style="margin:10px")
+form(action='/bidder' method='post' class='col s12 white-text' style="margin:10px")
     .row
         input-field(class='col s3 blue-grey darken-4')
             label(for="bidderid") Bidder #ID
