--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -23,14 +23,14 @@ html(lang='en' class="blue-grey darken-4")
 				form(action='/invoiceconsignor' method='get' class='col s12' style="margin:10px")
 					.row
 						input-field(class='col s12')
-							input(placeholder="Consigner #ID" name="printConsignor" type="text" class="validate")
+							input(placeholder="Consigner #ID" name="consignor" type="text" class="validate")
 					.row
 						button(class="btn waves-effect waves-light blue-grey darken-4" type="submit") Get Invoice
 				
 				form(action='/invoicebidder' method='get' class='col s12' style="margin:10px")
 					.row
 						input-field(class='col s12')
-							input(placeholder="Bidder #ID" name="printBidder" type="text" class="validate")
+							input(placeholder="Bidder #ID" name="bidder" type="text" class="validate")
 					.row
 						button(class="btn waves-effect waves-light blue-grey darken-4" type="submit" value="add") Get Invoice
 
