--- a/src/views/forms/lotform.jade
+++ b/src/views/forms/lotform.jade
@@ -2,12 +2,8 @@ form(action='/item' method='post' class='col s12 white-text' style="margin:10px"
     .row
         
         input-field(class='col s3 blue-grey darken-4')
-            label(for="consignorid") Consignor #ID
+            label(for="consignorId") Consignor #ID
             input(placeholder="Consignor#ID" name="consignorId" type="text" class="validate")
-        
-        input-field(class='col s3 offset-s1 blue-grey darken-4')
-            label(for="lotid") Lot #ID
-            input(placeholder="Lot#ID" name="lotid" type="text" class="validate")
         
         input-field(class='col s3 offset-s2 blue-grey darken-4')
             label(for="lotnumber") Lotnumber
