--- a/src/views/item.jade
+++ b/src/views/item.jade
@@ -75,7 +75,7 @@ body
 
 							div(class="gear")
 								label(for="description") Description
-								span(id="itemdescription" name="description" class="datainfo")
+								span(id="description" name="description" class="datainfo")
 								
 								a(href="#" class="editlink") Edit Info
 								a(class="savebtn") Save
