Added delete functionality for items

--- a/src/views/item.jade
+++ b/src/views/item.jade
@@ -107,3 +107,4 @@ body
 								
 								a(href="#" class="editlink") Edit Info
 								a(class="savebtn") Save
+							button(class="deleteitem btn waves-effect waves-light blue-grey darken-4" type="submit" value="delete") Delete
