--- a/src/css/tables.css
+++ b/src/css/tables.css
@@ -1,3 +1,11 @@
-table.highlight tbody tr:hover {
-    background-color: #546e7a !important;
-}
+div.DTE_Inline input {
+        border: none;
+        background-color: transparent;
+        padding: 0 !important;
+        font-size: 90%;
+    }
+
+    div.DTE_Inline input:focus {
+        outline: none;
+        background-color: transparent;
+    }
