--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -14,9 +14,9 @@ html(lang='en' class="blue-grey darken-4")
 		include ./navbar.jade
 
 		.row
-			div(class="col s5 blue-grey darken-2" style="height:100vh")
+			div(class="col s10 blue-grey darken-2" style="height:100vh")
+				include ./tables.jade
 
-			div(class="col s5 blue-grey darken-1" style="height:100vh")
 
 			div(class="col s2 blue-grey darken-3 white-text center" style="height:100vh")
 				h4 Invoices
