--- a/src/views/item.jade
+++ b/src/views/item.jade
@@ -5,10 +5,12 @@ head
 	link(href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
 	link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css")
 	link(rel="stylesheet" href="/css/style.css")
+	link(rel="stylesheet" href="/css/datatables.css")
 	meta(name='viewport', content='width=device-width, initial-scale=1')
 	script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
 	script(src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js")
 	script(src="/js/custom.js")
+	script(src="/js/datatables.js")
 
 body
 	include ./navbar.jade
@@ -16,23 +18,24 @@ body
 	.row
 
 		div(class="blue-grey darken-3 col s6" style="height:100vh")
-			div(style="margin-top:10px;")
-				button(class="btn waves-effect waves-light blue-grey darken-4" id="additem" style=" float:right") Add Lot
-			
-			table(class="white-text bordered highlight" id="consignors" cellspacing="0" width="100%")
-				thead
-					tr
-						th ID
-						th Lot
-						th Name
-						th Description
-				tbody
-					each item in items
+			.row
+				div(style="margin-top:10px;")
+					button(class="btn waves-effect waves-light blue-grey darken-4" id="additem" style=" float:right") Add Lot
+			.row
+				table(class="highlight white-text" id="consignors" cellspacing="0" width="100%")
+					thead
 						tr
-							td(class="itemid")=item.itemid
-							td=item.lotnumber
-							td=item.name
-							td=item.description
+							th ID
+							th Lot
+							th Name
+							th Description
+					tbody
+						each item in items
+							tr
+								td(class="itemid")=item.itemid
+								td=item.lotnumber
+								td=item.name
+								td=item.description
 
 
 		div(class="blue-grey darken-2 col s6" style="height:100vh")
