--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -23,7 +23,7 @@ html(lang='en' class="blue-grey darken-4")
 				form(action='/invoiceconsignor' method='get' class='col s12' style="margin:10px")
 					.row
 						input-field(class='col s12')
-							input(placeholder="Consigner #ID" name="printConsignor" type="text" class="validate")
+							input(placeholder="Consigner #ID" name="consignor" type="text" class="validate")
 					.row
 						button(class="btn waves-effect waves-light blue-grey darken-4" type="submit") Get Invoice
 				
